Enhance reactive patterns, fix grammar, and improve code quality
Reactive Improvements:
- Replace map() with handle() in ReactiveVeoVideoClient for proper error signaling
- Update ReactivePollingStrategy to use constructor injection instead of field injection
- Use SynchronousSink for controlled reactive stream emission

Documentation Updates:
- Fix grammar warnings by using em dashes (—) instead of hyphens (-) for phrase separation
- Update README.md and CLAUDE.md with virtual thread strategy documentation
- Add comprehensive coverage of all polling approaches and modern Java features

Code Quality:
- Add explanatory comments about intentional "busy waiting" in VeoVideoClient
- Improve test coverage with stream gatherers demonstration
- Follow reactive programming best practices throughout

Modern Java Features:
- Demonstrate proper use of handle() operator in Project Reactor
- Showcase constructor injection patterns
- Maintain comprehensive Java 24 feature coverage

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>